Sat Jan 10 17:36:45 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* performance-tests/Synch-Benchmarks/Perf_Test/Performance_Test_Options.cpp:

	  Fixed warnings with Forte 8.

Sat Jan 10 17:11:03 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * bin/MakeProjectCreator/templates/vc6dsp.mpd:
        * bin/MakeProjectCreator/templates/vc7.mpd:
        
          Added generation for custom build step dependency on the
          IDL or CIDL compiler executable. This enables the build to
          detect errors output by the (C)IDL compiler, and also will
          trigger the custom build step if the (C)IDL compiler has
          been updated.

Sat Jan 10 16:14:39 2004  Steve Huston  <shuston@riverace.com>

	* ace/OS_NS_sys_socket.inl (closesocket): On HP-UX, use
          shutdown() before, and in addition to, close() to close a socket.
	  The previous "fix" left the socket opened after shutdown().

	* tests/Bug_1576_Regression_Test.cpp: Use ACE_DLL_SUFFIX to form the
	  name of the bogus dll name instead of literal ".so". Prevents a
	  run-time warning from platforms that use a different suffix, such
	  as HP-UX.

	* tests/Makefile.am: Removed -module from the libTestOutput line
	  so it actually links the library for use by other tests. Added
	  TSS_Static_Test_SOURCES to have it build as well.

Sat Jan 10 11:18:24 2004  Steve Huston  <shuston@riverace.com>

	* ace/config-lite.h:
	* ace/Sock_Connect.cpp: Added /**/ to #include to keep MSVC from
	  complaining it can't find a file.

	* ace/Array_Base.cpp: The _MSC_VER check need not be done for CE
	  compiler - it doesn't need the extra #include and doesn't have <new>.

Fri Jan  9 16:55:39 2004  Steve Huston  <shuston@riverace.com>

	* examples/APG/Timers/Alarm.cpp:
	* examples/APG/ThreadManagement/Coop_Cancel.cpp:
	* examples/APG/ThreadManagement/Signals.cpp:
	* examples/APG/ThreadManagement/Signals2.cpp:
	* examples/APG/Sockets/Server.cpp: