@@ -193,22 +193,30 @@ sub Build_Core ()
         }
         else {
         @core_list = ($ACE_ROOT."\\ace\\ace.dsp",
+                      $ACE_ROOT."\\Kokyu\\Kokyu.dsp",
+                      $ACE_ROOT."\\ACEXML\\parser\\parser\\ACEXML_Parser.dsp",
+                      $ACE_ROOT."\\ACEXML\\common\\ACEXML.dsp",
                       $ACE_ROOT."\\apps\\gperf\\src\\gperf.dsp",
                       $ACE_ROOT."\\TAO\\TAO_IDL\\TAO_IDL_BE.dsp",
                       $ACE_ROOT."\\TAO\\TAO_IDL\\TAO_IDL_FE.dsp",
                       $ACE_ROOT."\\TAO\\TAO_IDL\\TAO_IDL_EXE.dsp",
                       $ACE_ROOT."\\TAO\\tao\\TAO.dsp",
+                      $ACE_ROOT."\\TAO\\tao\\Valuetype\\Valuetype.dsp",
+                      $ACE_ROOT."\\TAO\\tao\\IORInterceptor\\IORInterceptor.dsp",
+                      $ACE_ROOT."\\TAO\\tao\\ObjRefTemplate\\ObjRefTemplate.dsp",
                       $ACE_ROOT."\\TAO\\tao\\PortableServer\\PortableServer.dsp",
                       $ACE_ROOT."\\TAO\\tao\\DynamicAny\\DynamicAny.dsp",
                       $ACE_ROOT."\\TAO\\tao\\IORManipulation\\IORManipulation.dsp",
                       $ACE_ROOT."\\TAO\\tao\\IORTable\\IORTable.dsp",
                       $ACE_ROOT."\\TAO\\tao\\Messaging\\Messaging.dsp",
+                      $ACE_ROOT."\\TAO\\tao\\DynamicInterface\\DynamicInterface.dsp",
                       $ACE_ROOT."\\TAO\\tao\\Strategies\\Strategies.dsp",
                       $ACE_ROOT."\\TAO\\tao\\RTCORBA\\RTCORBA.dsp",
                       $ACE_ROOT."\\TAO\\tao\\RTPortableServer\\RTPortableServer.dsp",
-                      $ACE_ROOT."\\TAO\\tao\\Valuetype\\Valuetype.dsp",
-                      $ACE_ROOT."\\TAO\\tao\\IORInterceptor\\IORInterceptor.dsp",
-                      $ACE_ROOT."\\TAO\\tao\\ObjRefTemplate\\ObjRefTemplate.dsp",
+                      $ACE_ROOT."\\TAO\\tao\\Utils\\Utils.dsp",
+                      $ACE_ROOT."\\TAO\\tao\\RTScheduling\\RTScheduling.dsp",
+                      $ACE_ROOT."\\TAO\\tao\\IFR_Client\\IFR_Client.dsp",
+                      $ACE_ROOT."\\TAO\\tao\\TypeCodeFactory\\TypeCodeFactory.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\Svc_Utils.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\CosNaming.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\CosProperty.dsp",
@@ -219,14 +227,21 @@ sub Build_Core ()
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\RTSchedEvent.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\RTOLDEvent.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\CosEvent.dsp",
+                      $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\RTKokyuEvent.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\CosConcurrency.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\CosLifeCycle.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\CosTime.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\DsLogAdmin.dsp",
+                      $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\DsEventLogAdmin.dsp",
+                      $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\DsNotifyLogAdmin.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\CosNotification.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\FTORB_Utils.dsp",
+                      $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\FT_ClientORB.dsp",
+                      $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\FT_ServerORB.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\PortableGroup.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\CosLoadBalancing.dsp",
+                      $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\IFRService.dsp",
+                      $ACE_ROOT."\\TAO\\orbsvcs\\orbsvcs\\RT_Notification.dsp",
                       $ACE_ROOT."\\TAO\\orbsvcs\\Naming_Service\\Naming_Service.dsp");
          } 
 
